# BunGL

./: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  Camera.cpp  Camera.h  IUpdate.h  LibFacade.hpp  Renderer.cpp  Renderer.h  Updatable.h  Window.cpp  Window.h
src/Buffers/: ArrayBuffer.hpp  Buffer.hpp  BufferTypes.h  ElementBuffer.hpp  ShaderStorageBuffer.hpp  Storable.hpp  TextureBuffer.hpp  TextureData.h  VAOBuilder.hpp  VertexAttributesBuffer.hpp
src/Drawables/: DrawableObject.cpp  DrawableObject.h  IDrawable.h  Movable.cpp  Movable.h
src/Events/: EventHandler.hpp  EventMediator.cpp  EventMediator.h  IMediator.h  InputHandler.hpp
src/Notifications/: Notifiable.cpp  Notifiable.h
src/Properties/: Attachable.cpp  Attachable.h  BasicSceneObject.cpp  BasicSceneObject.h  Drawable.cpp  Drawable.h  IAttachable.h  Illuminant.cpp  Illuminant.h  Movable.cpp  Movable.h  Rotatable.cpp  Rotatable.h  Scalable.cpp  Scalable.h
src/Properties/Light/: Indirectional.cpp  Indirectional.h  Light.h
src/Scene/: Scene.cpp  Scene.h  ShaderStorageHandler.cpp  ShaderStorageHandler.h
src/Shaders/: IUniform.h  ShaderBuilder.hpp  ShaderEnum.h  ShaderProcessor.hpp  ShaderProgram.hpp
src/Shaders/Uniforms/: IUniform.h  IntUniformable.hpp  Mat4Uniformable.hpp  UniformManager.hpp  Uniformable.hpp  Vec3Uniformable.hpp
src/Utils/: FileUtils.h  ObjParser.hpp  TextureData.h
